# cmake-study

./: README.md  text.txt
Example1/: build.sh  clear.sh
Example1/test_cmake/: CMakeLists.txt  main.cpp
Example2/lib/: CMakeLists.txt
Example2/lib/sample_lib/: CMakeLists.txt
Example2/lib/sample_program/: CMakeLists.txt
Example3/: CMakeLists.txt
Example4/: CMakeLists.txt
Example4/my_lib/: CMakeLists.txt
Example4/my_prog/: CMakeLists.txt
